force-app/main/default/objects/Meetup__c/Meetup__c.object-meta.xml
<CustomObject>
    <description>This object is intended to be used to track meetups for users as part of the Meetup app</description>
    <label>Meetup</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meetups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>