force-app/main/default/objects/Meetup__c/fields/Registration_Code__c.field-meta.xml
<CustomField>
    <fullName>Registration_Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The registration code that will be used to find a meetup on the registration page</description>
    <label>Registration Code</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>