force-app/main/default/objects/Meetup__c/fields/Registration_Limit__c.field-meta.xml
<CustomField>
    <fullName>Registration_Limit__c</fullName>
    <description>The max # of registrations allowed for this Meetup</description>
    <label>Registration Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>