force-app/main/default/objects/Meetup__c/listViews/My_Meetups.listView-meta.xml
<ListView>
    <fullName>My_Meetups</fullName>
    <columns>NAME</columns>
    <columns>Registration_Code__c</columns>
    <columns>Registration_Limit__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Meetups</label>
</ListView>